# llm-wiki-studio

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: documents.py  qa.py  settings.py  wiki.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: document.py  document_chunk.py  wiki_page.py
backend/app/schemas/: document.py  qa.py  wiki.py
backend/app/services/: embeddings.py  ingest.py  llm.py  qa.py  reindex.py  repositories.py  retrieval.py  text.py  wiki.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/ask/: page.tsx
frontend/src/app/(dashboard)/documents/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/wiki/: page.tsx
frontend/src/app/wiki/[slug]/: page.tsx
frontend/src/components/: ask-client.tsx  documents-client.tsx  sidebar.tsx  stat-card.tsx  wiki-list-client.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: restart_backend.sh  restart_frontend.sh
